--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
 
     <!--RESET-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
     <script src="./assets/javascript/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
 
@@ -32,137 +27,114 @@
         <br>
         <br>
 
+
+
         <button type="button" class="btn btn-danger">Click here to start your game!</button></a>
-    </div>
 
-    <img src="http://bestanimations.com/Nature/Flora/Hemp/animated-hemp-marijuana-gif-14.gif">
+        <img src="http://bestanimations.com/Nature/Flora/Hemp/animated-hemp-marijuana-gif-14.gif">
 
-    <br>
-
-
-<div class="questions">
-    
-</div>
-    <div class="questions1">
-
-        <form name="types">
-            <!--LOCATION-->
-            <h3 id="types">What are the different types of Cannabis?</h3>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Indica">Indica</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Sativa">Sativa</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Hybrid">Hybrid</label>
-            </div>
-            <div class="radio">
-                <!-- correct answer -->
-                <label><input type="radio" name="optradio" value="All">All of the above</label>
-            </div>
-        </form>
         <br>
 
-        <div class="questions2">
 
-            <form name="shatter">
-                <!--TOY-->
-                <h3>What is shatter?</h3>
+
+        <div class="questions1">
+
+            <form name="types">
+                <!--LOCATION-->
+                <h3 id="types">What are the different types of Cannabis?</h3>
+                <div class="radio">
+                    <label><input type="radio" name="optradio" value="Indica">Indica</label>
+                </div>
+
+                <div class="radio">
+                    <label><input type="radio" name="optradio" value="Sativa">Sativa</label>
+                </div>
+
+                <div class="radio">
+                    <label><input type="radio" name="optradio" value="Hybrid">Hybrid</label>
+                </div>
+
                 <div class="radio">
                     <!-- correct answer -->
-                    <label><input type="radio" name="optradio" value="A term for cannabis concentrate">A term for
-                        cannabis concentrate.</label>
-                </div>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" value="Bong">When you knock your bong off the table
-                        and
-                        it breaks.</label>
-                </div>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" value="Mix">When you mix marijuana and another drug
-                        and
-                        smoke them together.</label>
-                </div>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" value="Brain">When your brain feels like its going
-                        to
-                        break into a million pieces because you just had a internal 10 minute conversation with
-                        yourself about the
-                        universe and your mind is blown. </label>
+                    <label><input type="radio" name="optradio" value="All">All of the above</label>
+
                 </div>
             </form>
-        </div>
-        <br>
+            <br>
 
-        <div class="questions3">
-            <form name="consume">
-                <!--ITCH-->
-                <h3>How many joints would you have to smoke to constitue a lethal dose of Cannabis?</h3>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" value="40">40</label>
-                </div>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" value="400">400</label>
-                </div>
-                <div class="radio">
+            <div class="questions2">
 
-                </div>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" value="4">4</label>
-                </div>
-        </div><!-- correct answer -->
-        <label><input type="radio" name="optradio" value="Please">PLEASE. Do you really think you can
-            OD on weed?</label>
-        </form>
-    </div>
-    <br>
+                <form name="shatter">
+                    <!--TOY-->
+                    <h3>What is shatter?</h3>
+                    <div class="radio">
+                        <!-- correct answer -->
+                        <label><input type="radio" name="optradio" value="A term for cannabis concentrate">A term for
+                            cannabis concentrate.</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio" value="Bong">When you knock your bong off the table
+                            and
+                            it breaks.</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio" value="Mix">When you mix marijuana and another drug
+                            and
+                            smoke them together.</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio" value="Brain">When your brain feels like its going
+                            to
+                            break into a million pieces because you just had a internal 10 minute conversation with
+                            yourself about the
+                            universe and your mind is blown. </label>
+                    </div>
+                </form>
+                <br>
+                <div class="questions3">
 
-    <div class="questions4">
-        <form name="science">
-            <!--HOLIDAY-->
+                    <form name="science">
+                        <!--ITCH-->
+                        <h3>What’s the scientific name for Cannabis?</h3>
+                        <div class="radio">
+                            <label><input type="radio" name="optradio" value="Cannabis Indica">Cannabis Indica</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="optradio" value="Weed">Weed</label>
+                        </div>
+                        <div class="radio">
 
-            <h3>What’s the scientific name for Cannabis?</h3>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Weed">Weed</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="optradio" value="Cannabis">Cannabis</label>
+                        </div>
+                </div><!-- correct answer -->
+                <label><input type="radio" name="optradio" value="Cannabis Sativa">Cannabis Sativa</label>
             </div>
-            <div class="radio">
-                <!-- correct answer -->
-                <label><input type="radio" name="optradio" value="Cannabis Sativa">Cannabis Satvia</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Devils lettuce">The Devil's Lettuce</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Cannabis Indica">Cannabis Indica</label>
-            </div>
-    </div>
-    </form>
-    </div>
-    <br>
+            </form>
+            <br>
+            <div class="questions4">
 
-    <div class="questions5">
-        <form name="you">
-            <!--COLLECTION-->
-            <h3>Do you love Cannabis?</h3>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Ok">It's ok</label>
-            </div>
-            <div class="radio">
-                <!-- correct answer -->
-                <label><input type="radio" name="optradio" value="DUH">DUH</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="No">No</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="optradio" value="Never">Never used it (you should change that)</label>
-            </div>
-    </div>
-    </form>
+                <form name="leathal">
+                    <!--HOLIDAY-->
 
-    </div>
+                    <h3>How many grams of Cannabis is considered to be lethal?</h3>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio" value="Weed">3.5 grams</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio" value="14">14 grams</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio" value="28">28 grams</label>
+                    </div>
+                    <div class="radio">
+                        <!-- correct answer -->
+                        <label><input type="radio" name="optradio" value="None">There isn't a lethal dose!</label>
 
+
+                </form>
+            </div>
 </body>
 
 </html>
