--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>The Devil's Lettuce Trivia</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
 
     <!--RESET-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -18,8 +19,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
-    <script src="assets/javascript/app.js"></script>
 </head>
 
 <body>
@@ -29,12 +28,11 @@
         <h2 id="instruction"> Ready to test your knowledge on Marijuana? You will have 30 seconds to answer the
             questions
             below!</h2>
+
+        <button id= "counter" class="btn danger">COUNTER</button>
+
         <br>
         <br>
-
-
-
-        <button type="button" class="btn btn-danger">Click here to start your game!</button></a>
 
         <img src="http://bestanimations.com/Nature/Flora/Hemp/animated-hemp-marijuana-gif-14.gif">
 
@@ -136,8 +134,10 @@
                     <div class="radio">
                         <!-- correct answer -->
                         <label><input type="radio" name="optradio" value="None">There isn't a lethal dose!</label>
-            </form>
+                </form>
             </div>
+
+            <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
